--- a/src/SignIn_Registration/Autorization.module.css
+++ b/src/SignIn_Registration/Autorization.module.css
@@ -44,15 +44,6 @@ h1{
     padding: 5px;
     cursor: pointer;
 }
-.subInput{
-    width:150px;
-    height:30px;
-    background-color: rgb(228, 231, 27) !important;
-    border-radius: 5px;
-    border: none;
-    margin-top: 5%;
-
-}
 input::placeholder {
     color: white;
     font-size: 0.9em;
@@ -71,11 +62,16 @@ input::placeholder {
 .form a:active{
     color:rgb(207, 207, 174);
 }
-body{
+.bodyImg{
     background-image: url(https://storge.pic2.me/c/1360x800/539/5550f0d903066.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
+    height: 100%;
+    position:absolute;
+    top:0px;
+    left:0px;
+    z-index: -1;
 }
 
 @media (max-width:720px){
